# Unreal-MCP-Ghost

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPER_LOG.md  LIMITATIONS_AND_ROADMAP.md  NOTICE.md  README.md  SECURITY.md  _build_plugin.bat  _lsdll.bat  _sync_plugin.bat  bot_movement_research.md  bot_movement_solution.md  bt_graph_tools.py  build_enhanced_input.py  copy_plugin_to_project.py  cursor_mcp_config.json  cursor_system_prompt.md  diagnose_bp_smuggler.py  es_mcp_native.py  exec_python_changes.patch  fix_blueprint_connections.py  fix_bullet.py  fix_extended.py  fix_extended_v2.py  fix_q_r_input.py  fix_smuggler_bound_events.py  fix_ue56_definitive.py  fix_ue56_final.py  floating_bot_research.md  mcp_client.py  native_component_debug_plan.md  pyproject.toml  research_character_movement.md  research_findings.md  sandbox_ue5cli.py
unreal_mcp_server/: build_all_blueprints.py  build_pacifist_drone.py  http_bridge.py  native_remote.py  proxy.py  pyproject.toml  test_e2e.py  tool_inventory_categories.json  ue5cli.py  unreal_mcp_server.py
unreal_mcp_server/chat/: __init__.py  routes.py  storage.py
unreal_mcp_server/skills/: SKILL.md  __init__.py  health_system.py
unreal_mcp_server/tests/: __init__.py  demo_a_live.py  demo_b_live.py  demo_c_live.py  demo_d_live.py  test_ai_tools.py  test_animation_tools.py  test_audit_blueprint_health_skill.py  test_b10_chaos_tools.py  test_b11_mrq_tools.py  test_b12_online_tools.py  test_b13_pixelstream_tools.py  test_b14_metahuman_tools.py  test_b1_gap_tools.py  test_b2_diagnostics_tools.py  test_b3_gas_tools.py  test_b4_network_tools.py  test_b5_audio_tools.py  test_b6_geometry_tools.py  test_b7_mass_tools.py  test_b8_motion_chooser_tools.py  test_b9_world_partition_hlod_tools.py  test_c10_accessibility_polish.py  test_c11_onboarding.py  test_c12_gameplay_builder_quick_action.py  test_c13_playable_slice_quick_action.py  test_c1_editor_module_structure.py  test_c2_chat_panel_core.py  test_c3_tool_call_cards.py  test_c4_context_chips.py  test_c5_asset_drag_drop.py  test_c6_tool_palette.py  test_c7_inline_evidence.py  test_c8_session_management.py  test_c9_command_palette.py  test_chat.py  test_cpp_bridge.py  test_d10_tripo_magic_brush_studio_tools.py  test_d1_generative_tools.py  test_d2_generative_config_auth.py  (+34 more)
unreal_mcp_server/tools/: __init__.py  advanced_node_tools.py  ai_tools.py  animation_tools.py  asset_import_tools.py  audio_tools.py  blueprint_tools.py  chaos_tools.py  chat_tools.py  communication_tools.py  cpp_bridge_tools.py  data_tools.py  diagnostics_tools.py  editor_tools.py  exec_substrate.py  folder_import_tools.py  gameplay_tools.py  gas_tools.py  generative_tools.py  (+26 more)
(+182 files in other folders)
