[project]
name = "unreal-mcp-server"
version = "2.0.0"
description = "Full Unreal Engine 5 Blueprint Visual Scripting MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project.scripts]
unreal-mcp = "unreal_mcp_server:main"
