[project]
name = "unreal-mcp-server"
version = "2.0.0"
description = "Full Unreal Engine 5 Blueprint Visual Scripting MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    # fastmcp 2.x renamed description= to instructions= (already patched in server).
    "fastmcp>=2.0.0",
    # pydantic-core >=2.28.0 ships pre-built wheels for Python 3.14.
    # 2.27.x tries to compile via Rust/PyO3 which caps at Python 3.13.
    "pydantic-core>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project.scripts]
unreal-mcp = "unreal_mcp_server:main"
